# Lateral_control

./: README.md
AutoControl/: CMakeLists.txt  lateral_control.cpp  lateral_control.h  linear_quadratic_regulator.cpp  linear_quadratic_regulator.h  main.cpp
competition_ws/devel/: .catkin  .rosinstall
competition_ws/devel/include/LateralControl/: Num.h
competition_ws/devel/include/common_msgs/: Lane.h  Lanes.h  Vehicle_Control.h  Vehicle_Feedback.h  object.h  objects.h
competition_ws/devel/include/sub_control/: Num.h
competition_ws/devel/lib/LateralControl/: LateralControl
competition_ws/devel/lib/pkgconfig/: LateralControl.pc  common_msgs.pc  sub_control.pc
competition_ws/devel/lib/sub_control/: sub_control
competition_ws/devel/share/LateralControl/cmake/: LateralControl-msg-paths.cmake  LateralControlConfig.cmake
competition_ws/devel/share/common_msgs/cmake/: common_msgs-msg-extras.cmake  common_msgs-msg-paths.cmake  common_msgsConfig.cmake
competition_ws/devel/share/sub_control/cmake/: sub_control-msg-extras.cmake  sub_control-msg-paths.cmake  (+1 more)
competition_ws/src/LateralControl/: CMakeLists.txt
competition_ws/src/LateralControl/src/: lateral_control.cpp  lateral_control.h  linear_quadratic_regulator.cpp  linear_quadratic_regulator.h  main.cpp
competition_ws/src/common_msgs/: CMakeLists.txt  package.xml
competition_ws/src/common_msgs/msg/: Lane.msg  Lanes.msg  Vehicle_Control.msg  Vehicle_Feedback.msg  object.msg  objects.msg
competition_ws/src/sub_control/: CMakeLists.txt
competition_ws/src/sub_control/src/: sub_control.cpp
(+51 files in other folders)
